<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/openmeetingmode"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/openmeetingradius"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/openmeetingmode"
                android:textSize="24sp"
                android:textStyle="bold" >
            </TextView>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="24dp"
                    android:text="@string/openmodedetail" >
                </TextView>
                <ImageView
                    android:id="@+id/openmeetingconfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/confirmselect"
                    android:visibility="invisible"
                    >
                </ImageView>
                
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stopmeetingmode"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/closemeetingradius"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/stopmeetingmode"
                android:textSize="24sp"
                android:textStyle="bold" >
            </TextView>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="24dp"
                    android:text="@string/closemodedetail" >
                </TextView>
                
                <ImageView
                    android:id="@+id/closemeetingconfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/confirmselect"
                    android:visibility="invisible"
                    >
                </ImageView>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>