<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- title bar part -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/background_material_dark"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="36dp"
            android:background="@drawable/round"
            android:scaleType="centerInside"
            android:src="@drawable/logo" >
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="48dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shortname"
                    android:textColor="@android:color/white"
                    android:textSize="36sp" >
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/longname"
                    android:textColor="@android:color/white"
                    android:textSize="28sp" >
                </TextView>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/englishname"
                android:textColor="@android:color/white"
                android:textSize="16sp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/material_grey_600"
        android:orientation="vertical" >
    </LinearLayout>
    <!-- middle content part -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/background_floating_material_dark"
        android:orientation="vertical" >

        <!-- show mechain and media item part -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal" >

            <!-- show item part -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:background="@color/material_blue_grey_900"
                    android:paddingBottom="8dp" >

                    <LinearLayout
                        android:id="@+id/leftLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/leftbutton"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/voiceCtrlButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:src="@drawable/left1" >
                        </ImageView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="2px"
                            android:background="@color/material_grey_600"
                            android:orientation="vertical" >
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/modeButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:src="@drawable/left2" />
                    </LinearLayout>

                    <!-- screen part -->

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/leftLayout" >

                        <RelativeLayout
                            android:id="@+id/screencontainer"
                            android:layout_width="1550px"
                            android:layout_height="740px"
                            android:layout_gravity="center"
                            android:layout_marginBottom="12dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/screenbg" >
                        </RelativeLayout>

                        <!-- screen button -->

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:layout_marginRight="16dp"
                            android:paddingBottom="0dp" >

                            <ImageView
                                android:id="@+id/split1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
                                android:src="@drawable/split1" >
                            </ImageView>

                            <ImageView
                                android:id="@+id/split4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@id/split1"
                                android:paddingLeft="4dp"
                                android:paddingRight="4dp"
                                android:src="@drawable/split4" >
                            </ImageView>

                            <TextView
                                android:id="@+id/screenname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toLeftOf="@id/split1" >
                            </TextView>

                            <ImageView
                                android:id="@+id/screenswitch"
                                android:layout_width="48dp"
                                android:layout_height="24dp"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="148dp"
                                android:layout_toRightOf="@id/split4"
                                android:background="@android:color/white"
                                android:scaleType="fitXY"
                                android:src="@drawable/screenclose" >
                            </ImageView>
                        </RelativeLayout>
                    </FrameLayout>
                </RelativeLayout>

                <!-- bottom buttons part -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:background="@color/material_blue_grey_800"
                    android:orientation="vertical" >

                    <FrameLayout
                        android:id="@+id/ctrlerfrag"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/material_blue_grey_800"
                        android:orientation="vertical" >
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/material_blue_grey_950"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/material_grey_600"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/background_material_dark"
        android:paddingLeft="128dp"
        android:paddingRight="128dp"
        >
        
        <RelativeLayout
            android:id="@+id/toolbarcontainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
            >
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>